packages/core/search-box/src/antlr4/StandardLuceneGrammarParser.ts
// Generated from StandardLuceneGrammar.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import StandardLuceneGrammarListener from "./StandardLuceneGrammarListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class StandardLuceneGrammarParser extends Parser {
	public static readonly LPAREN = 1;
	public static readonly RPAREN = 2;
	public static readonly LBRACK = 3;
	public static readonly RBRACK = 4;
	public static readonly COLON = 5;
	public static readonly PLUS = 6;
	public static readonly MINUS = 7;
	public static readonly STAR = 8;
	public static readonly QMARK = 9;
	public static readonly LCURLY = 10;
	public static readonly RCURLY = 11;
	public static readonly CARAT = 12;
	public static readonly TILDE = 13;
	public static readonly DQUOTE = 14;
	public static readonly SQUOTE = 15;
	public static readonly TO = 16;
	public static readonly AND = 17;
	public static readonly OR = 18;
	public static readonly NOT = 19;
	public static readonly WS = 20;
	public static readonly NUMBER = 21;
	public static readonly DATE_TOKEN = 22;
	public static readonly TERM_NORMAL = 23;
	public static readonly TERM_TRUNCATED = 24;
	public static readonly PHRASE = 25;
	public static readonly PHRASE_ANYTHING = 26;
	public static readonly OPERATOR = 27;
	public static readonly ATOM = 28;
	public static readonly MODIFIER = 29;
	public static readonly TMODIFIER = 30;
	public static readonly CLAUSE = 31;
	public static readonly FIELD = 32;
	public static readonly FUZZY = 33;
	public static readonly BOOST = 34;
	public static readonly QNORMAL = 35;
	public static readonly QPHRASE = 36;
	public static readonly QPHRASETRUNC = 37;
	public static readonly QTRUNCATED = 38;
	public static readonly QRANGEIN = 39;
	public static readonly QRANGEEX = 40;
	public static readonly QANYTHING = 41;
	public static readonly QDATE = 42;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_mainQ = 0;
	public static readonly RULE_clauseDefault = 1;
	public static readonly RULE_clauseOr = 2;
	public static readonly RULE_clauseAnd = 3;
	public static readonly RULE_clauseNot = 4;
	public static readonly RULE_clauseBasic = 5;
	public static readonly RULE_atom = 6;
	public static readonly RULE_field = 7;
	public static readonly RULE_value = 8;
	public static readonly RULE_anything = 9;
	public static readonly RULE_two_sided_range_term = 10;
	public static readonly RULE_range_term = 11;
	public static readonly RULE_range_value = 12;
	public static readonly RULE_multi_value = 13;
	public static readonly RULE_normal = 14;
	public static readonly RULE_truncated = 15;
	public static readonly RULE_quoted_truncated = 16;
	public static readonly RULE_quoted = 17;
	public static readonly RULE_modifier = 18;
	public static readonly RULE_term_modifier = 19;
	public static readonly RULE_boost = 20;
	public static readonly RULE_fuzzy = 21;
	public static readonly RULE_not_ = 22;
	public static readonly RULE_and_ = 23;
	public static readonly RULE_or_ = 24;
	public static readonly RULE_date = 25;
	public static readonly RULE_sep = 26;
	public static readonly literalNames: (string | null)[] = [ null, "'('", 
                                                            "')'", "'['", 
                                                            "']'", "':'", 
                                                            "'+'", null, 
                                                            "'*'", null, 
                                                            "'{'", "'}'", 
                                                            null, null, 
                                                            "'\"'", "'''", 
                                                            "'TO'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "LPAREN", 
                                                             "RPAREN", "LBRACK", 
                                                             "RBRACK", "COLON", 
                                                             "PLUS", "MINUS", 
                                                             "STAR", "QMARK", 
                                                             "LCURLY", "RCURLY", 
                                                             "CARAT", "TILDE", 
                                                             "DQUOTE", "SQUOTE", 
                                                             "TO", "AND", 
                                                             "OR", "NOT", 
                                                             "WS", "NUMBER", 
                                                             "DATE_TOKEN", 
                                                             "TERM_NORMAL", 
                                                             "TERM_TRUNCATED", 
                                                             "PHRASE", "PHRASE_ANYTHING", 
                                                             "OPERATOR", 
                                                             "ATOM", "MODIFIER", 
                                                             "TMODIFIER", 
                                                             "CLAUSE", "FIELD", 
                                                             "FUZZY", "BOOST", 
                                                             "QNORMAL", 
                                                             "QPHRASE", 
                                                             "QPHRASETRUNC", 
                                                             "QTRUNCATED", 
                                                             "QRANGEIN", 
                                                             "QRANGEEX", 
                                                             "QANYTHING", 
                                                             "QDATE" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"mainQ", "clauseDefault", "clauseOr", "clauseAnd", "clauseNot", "clauseBasic", 
		"atom", "field", "value", "anything", "two_sided_range_term", "range_term", 
		"range_value", "multi_value", "normal", "truncated", "quoted_truncated", 
		"quoted", "modifier", "term_modifier", "boost", "fuzzy", "not_", "and_", 
		"or_", "date", "sep",
	];
	public get grammarFileName(): string { return "StandardLuceneGrammar.g4"; }
	public get literalNames(): (string | null)[] { return StandardLuceneGrammarParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return StandardLuceneGrammarParser.symbolicNames; }
	public get ruleNames(): string[] { return StandardLuceneGrammarParser.ruleNames; }
	public get serializedATN(): number[] { return StandardLuceneGrammarParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, StandardLuceneGrammarParser._ATN, StandardLuceneGrammarParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public mainQ(): MainQContext {
		let localctx: MainQContext = new MainQContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, StandardLuceneGrammarParser.RULE_mainQ);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 55;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 0, this._ctx) ) {
			case 1:
				{
				this.state = 54;
				this.sep();
				}
				break;
			}
			this.state = 57;
			localctx._clause = this.clauseDefault();
			this.state = 59;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===20) {
				{
				this.state = 58;
				this.sep();
				}
			}

			this.state = 61;
			this.match(StandardLuceneGrammarParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public clauseDefault(): ClauseDefaultContext {
		let localctx: ClauseDefaultContext = new ClauseDefaultContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, StandardLuceneGrammarParser.RULE_clauseDefault);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 63;
			this.clauseOr();
			this.state = 70;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 65;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 2, this._ctx) ) {
					case 1:
						{
						this.state = 64;
						this.sep();
						}
						break;
					}
					this.state = 67;
					this.clauseOr();
					}
					}
				}
				this.state = 72;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public clauseOr(): ClauseOrContext {
		let localctx: ClauseOrContext = new ClauseOrContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, StandardLuceneGrammarParser.RULE_clauseOr);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 73;
			this.clauseAnd();
			this.state = 79;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 4, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 74;
					this.or_();
					this.state = 75;
					this.clauseAnd();
					}
					}
				}
				this.state = 81;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 4, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public clauseAnd(): ClauseAndContext {
		let localctx: ClauseAndContext = new ClauseAndContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, StandardLuceneGrammarParser.RULE_clauseAnd);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 82;
			this.clauseNot();
			this.state = 88;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 83;
					this.and_();
					this.state = 84;
					this.clauseNot();
					}
					}
				}
				this.state = 90;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public clauseNot(): ClauseNotContext {
		let localctx: ClauseNotContext = new ClauseNotContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, StandardLuceneGrammarParser.RULE_clauseNot);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 91;
			this.clauseBasic();
			this.state = 97;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 92;
					this.not_();
					this.state = 93;
					this.clauseBasic();
					}
					}
				}
				this.state = 99;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public clauseBasic(): ClauseBasicContext {
		let localctx: ClauseBasicContext = new ClauseBasicContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, StandardLuceneGrammarParser.RULE_clauseBasic);
		let _la: number;
		try {
			this.state = 119;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 12, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 101;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===20) {
					{
					this.state = 100;
					this.sep();
					}
				}

				this.state = 104;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===6 || _la===7) {
					{
					this.state = 103;
					this.modifier();
					}
				}

				this.state = 106;
				this.match(StandardLuceneGrammarParser.LPAREN);
				this.state = 107;
				this.clauseDefault();
				this.state = 109;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===20) {
					{
					this.state = 108;
					this.sep();
					}
				}

				this.state = 111;
				this.match(StandardLuceneGrammarParser.RPAREN);
				this.state = 113;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===12 || _la===13) {
					{
					this.state = 112;
					this.term_modifier();
					}
				}

				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 116;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===20) {
					{
					this.state = 115;
					this.sep();
					}
				}

				this.state = 118;
				this.atom();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public atom(): AtomContext {
		let localctx: AtomContext = new AtomContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, StandardLuceneGrammarParser.RULE_atom);
		let _la: number;
		try {
			this.state = 139;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 18, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 122;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===6 || _la===7) {
					{
					this.state = 121;
					this.modifier();
					}
				}

				this.state = 124;
				this.field();
				this.state = 125;
				this.multi_value();
				this.state = 127;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===12 || _la===13) {
					{
					this.state = 126;
					this.term_modifier();
					}
				}

				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 130;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===6 || _la===7) {
					{
					this.state = 129;
					this.modifier();
					}
				}

				this.state = 133;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 16, this._ctx) ) {
				case 1:
					{
					this.state = 132;
					this.field();
					}
					break;
				}
				this.state = 135;
				this.value();
				this.state = 137;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===12 || _la===13) {
					{
					this.state = 136;
					this.term_modifier();
					}
				}

				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public field(): FieldContext {
		let localctx: FieldContext = new FieldContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, StandardLuceneGrammarParser.RULE_field);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 141;
			this.match(StandardLuceneGrammarParser.TERM_NORMAL);
			this.state = 142;
			this.match(StandardLuceneGrammarParser.COLON);
			this.state = 144;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===20) {
				{
				this.state = 143;
				this.sep();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public value(): ValueContext {
		let localctx: ValueContext = new ValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, StandardLuceneGrammarParser.RULE_value);
		try {
			this.state = 154;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 20, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 146;
				this.range_term();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 147;
				this.normal();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 148;
				this.truncated();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 149;
				this.quoted();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 150;
				this.quoted_truncated();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 151;
				this.match(StandardLuceneGrammarParser.QMARK);
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 152;
				this.anything();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 153;
				this.match(StandardLuceneGrammarParser.STAR);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public anything(): AnythingContext {
		let localctx: AnythingContext = new AnythingContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, StandardLuceneGrammarParser.RULE_anything);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 156;
			this.match(StandardLuceneGrammarParser.STAR);
			this.state = 157;
			this.match(StandardLuceneGrammarParser.COLON);
			this.state = 158;
			this.match(StandardLuceneGrammarParser.STAR);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public two_sided_range_term(): Two_sided_range_termContext {
		let localctx: Two_sided_range_termContext = new Two_sided_range_termContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, StandardLuceneGrammarParser.RULE_two_sided_range_term);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 160;
			localctx._start_type = this._input.LT(1);
			_la = this._input.LA(1);
			if(!(_la===3 || _la===10)) {
			    localctx._start_type = this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 162;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===20) {
				{
				this.state = 161;
				this.sep();
				}
			}

			{
			this.state = 164;
			localctx._a = this.range_value();
			}
			this.state = 166;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 22, this._ctx) ) {
			case 1:
				{
				this.state = 165;
				this.sep();
				}
				break;
			}
			this.state = 178;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 133234944) !== 0)) {
				{
				this.state = 169;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===16) {
					{
					this.state = 168;
					this.match(StandardLuceneGrammarParser.TO);
					}
				}

				this.state = 172;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===20) {
					{
					this.state = 171;
					this.sep();
					}
				}

				this.state = 174;
				localctx._b = this.range_value();
				this.state = 176;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===20) {
					{
					this.state = 175;
					this.sep();
					}
				}

				}
			}

			this.state = 180;
			localctx._end_type = this._input.LT(1);
			_la = this._input.LA(1);
			if(!(_la===4 || _la===11)) {
			    localctx._end_type = this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public range_term(): Range_termContext {
		let localctx: Range_termContext = new Range_termContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, StandardLuceneGrammarParser.RULE_range_term);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 182;
			this.two_sided_range_term();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public range_value(): Range_valueContext {
		let localctx: Range_valueContext = new Range_valueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, StandardLuceneGrammarParser.RULE_range_value);
		try {
			this.state = 190;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 24:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 184;
				this.truncated();
				}
				break;
			case 25:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 185;
				this.quoted();
				}
				break;
			case 26:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 186;
				this.quoted_truncated();
				}
				break;
			case 22:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 187;
				this.date();
				}
				break;
			case 21:
			case 23:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 188;
				this.normal();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 189;
				this.match(StandardLuceneGrammarParser.STAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public multi_value(): Multi_valueContext {
		let localctx: Multi_valueContext = new Multi_valueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, StandardLuceneGrammarParser.RULE_multi_value);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 192;
			this.match(StandardLuceneGrammarParser.LPAREN);
			this.state = 193;
			this.clauseDefault();
			this.state = 195;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===20) {
				{
				this.state = 194;
				this.sep();
				}
			}
